<resources>
    <string name="app_name" translatable="false">Boing Ball Demo</string>

    <string name="workbench" translatable="false">Workbench</string>

    <string name="preferences">Preferences</string>
    <string name="clock">Clock</string>
    <string name="about">About</string>
    <string name="copper" translatable="false">Copper</string>
    <string name="starfield" translatable="false">Starfield</string>
    <string name="sine_scroll" translatable="false">Scroller</string>
    <string name="plasma_demo" translatable="false">Plasma</string>
    <string name="twister_demo" translatable="false">Twister</string>
    <string name="kefrens_demo" translatable="false">Kefrens</string>
    <string name="calculator">Calculator</string>
    <string name="music_player" translatable="false">Player</string>
    <string name="chaotic_player" translatable="false">Chaotic Player</string>
    <string name="music_player_version" translatable="false">V1.0</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_move_up">Move track up</string>
    <string name="playlist_move_down">Move track down</string>
    <string name="player_previous">Previous track</string>
    <string name="player_rewind">Rewind</string>
    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_stop">Stop</string>
    <string name="player_forward">Fast forward</string>
    <string name="player_next">Next track</string>
    <string name="shell" translatable="false">Shell</string>
    <string name="shell13" translatable="false">CLI</string>
    <string name="boing" translatable="false">Boing</string>
    <string name="preferences_pick_main_bb_color">Pick main BB color</string>
    <string name="preferences_pick_alternate_bb_color">Pick alternate BB color</string>
    <string name="preferences_draw_bb_square_borders">Draw BB square borders</string>
    <string name="preferences_video_system">Video system</string>
    <string name="preferences_video_pal" translatable="false">PAL</string>
    <string name="preferences_video_ntsc" translatable="false">NTSC</string>
    <string name="preferences_video_system_help">PAL uses a 50 Hz video refresh rate and NTSC uses 60 Hz. This setting adjusts the Boing Ball animation speed to match the selected video system.</string>
    <string name="preferences_close">Close</string>
    <string name="preferences_set_demo_defaults">Set original demo defaults</string>
    <string name="preferences_set_app_defaults">Set app defaults</string>
    <string name="preferences_set_amigaos_2_style">Set AmigaOS 2+ style</string>
    <string name="preferences_set_amigaos_1_3_style">Set AmigaOS 1.3 style</string>
    <string name="about_app_name">App name: %1$s</string>
    <string name="about_application_version">App version: %1$s</string>
    <string name="guru_meditation_header">Software Failure.  Press left mouse button to continue.</string>
    <string name="guru_meditation_code">Guru Meditation %1$s</string>
</resources>
